# RTX-CUDA-template

./: .gitignore  CMakeLists.txt  README.md
CMake/: PTXUtilities.cmake
common/: common.cpp  common.h
src/: cuda_kernel.cu  cuda_methods.cuh  device_simulation.cuh  device_tools.cuh  main.cu  rand.cuh  rtx.h  rtx_functions.h  rtx_kernels.cu  rtx_params.h  tools.h
